# ayab-firmware

./: .gitmodules  Doxyfile
scripts/: start_hw_test.sh
src/ayab/: beeper.cpp  beeper.h  board.h  encoders.cpp  encoders.h  hw_test.cpp  knitter.cpp  knitter.h  main.cpp  serial_encoding.cpp  serial_encoding.h  singleton.h  solenoids.cpp  solenoids.h
test/: CMakeLists.txt  test.sh  test_beeper.cpp  test_encoders.cpp  test_hw_test.cpp  test_hw_test_integration.cpp  test_integration.cpp  test_knitter.cpp  test_serial_encoding.cpp  test_solenoids.cpp
test/mocks/Beeper/: beeper_mock.cpp
test/mocks/Encoders/: encoders_mock.cpp  encoders_mock.h
test/mocks/Knitter/: knitter_mock.cpp  knitter_mock.h
test/mocks/SerialCommand/: serial_command_mock.h
test/mocks/SerialEncoding/: serial_encoding_mock.cpp  serial_encoding_mock.h
test/mocks/SoftI2CMaster/: SoftI2CMaster.h  soft_i2c_mock.cpp
test/mocks/Solenoids/: solenoids_mock.cpp  solenoids_mock.h
test/mocks/arduino/: Arduino.h
test/mocks/arduino/util/: delay.h
test/mocks/hw_test/: serial_command_mock.cpp  soft_i2c_mock.cpp
test/mocks/knitter/: encoders_mock.cpp  serial_encoding_mock.cpp  serial_encoding_mock.h  solenoids_mock.cpp
test/stubs/PacketSerial/: PacketSerial.h
